day2: anchor, list, image tags

--- a/notes/html/l4anchortag.html
+++ b/notes/html/l4anchortag.html
@@ -7,12 +7,31 @@
 		<h3>Anchor Tag - External</h3>
 
 		<a href="https://www.google.com/">Google</a><br/>
-
 		<a href="https://www.linkedin.com/">LinkedIn</a><br/>
 
-		<a href="https://anicrush.to/home/" target="_blank">Anicrush</a>
+		<a href="https://anicrush.to/home/" target="_blank">Anicrush</a><br/>
+		<a href="https://github.com/" target="_self">Github</a>
+		<hr/>
 
+		<h3>Anchor Tag - internal</h3>
 
+		<a href="l2headingtag.html" target="_blank">Go to Lesson 2</a><br/>
+
+		<!-- './' = means this folder (or) start from here. အခုနေရာကနေ စပါဆိုပြီပြောထားတာ -->
+		<a href="./l3paragraphtag.html" target="_blank">Go to Lesson 3</a><br/>
+
+		<a href="./dir/file_dir_test.html">Go to File Directory Test</a>
+		<hr/>
+
+		<h3>Anchor Tag - link to an email address</h3>
+
+		<a href="mailto:acn.alexchan@gmail.com">Mail Me!</a>
+		<hr/>
+
+		<h3>Anchor Tag - link to phone number</h3>
+
+		<a href="tel:+959786897404">+959-786-897-404</a>
+		<hr/>
 	</body>
 </html>
 
@@ -29,6 +48,14 @@ Attributes of Anchor Tag:
 href: Hypertext reference
 Hypertext reference ကို ခေါ်သုံးတဲ့ အချိန်ကျရင် https/http ဆိုတဲ့ protocol ကို ခေါ်သုံးရတယ်။
 
+target: opening the website based on the different attributes (ကိုယ် website ရဲ့ information ကို ကိုယ် website ပေါ်မှာ ပြန်ပြချင်တယ်ဆိုရင် target ကို မသုံးနဲ့။)
+_blank: it will open information on the new tab.
+_self: it will open in the same tab. (default value)
+
 Attributes တွေမှာလည်း value 2ခု ရှိတယ်။ Custom Value & Default Value ဆိုပြီ ရှိတယ်။
+
+SSL = Secure Socket Layer
+
+Internal မှာ တခြား file တွေကို ချိတ်ရင် project order တခုထဲအောက်မှာ ရှိရတယ်။
 
  -->
