--- a/notes/html/l10formelements.html
+++ b/notes/html/l10formelements.html
@@ -38,7 +38,7 @@
             <br/><br/>
 
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" class="" placeholder="Enter Your Email..." />
+            <input type="email" name="email" id="email" class="" placeholder="Enter Your Email..." value="example@domain.com"/>
 
             <br/><br/>
 
@@ -69,6 +69,76 @@
 
             <br/><br/>
 
+            <label for="country">Citizen</label>
+            <select name="country" id="country">
+                <option selected disabled>Choose A Country</option>
+                <option value="MM">Myanmar (Burma)</option>
+                <option value="TH">Thailand</option>
+                <option value="LA">Laos</option>
+                <option value="AL">Albania</option>
+                <option value="QA">Qatar</option>
+            </select>
+
+            <br/><br/>
+
+            <label for="role">Role</label>
+            <select name="role" id="role" class="" multiple>
+                <!-- <option selected disabled>Select A Role</option> -->
+                <option value="1">Manager</option>
+                <option value="2">Admin</option>
+                <option value="3">Editor</option>
+                <option value="4">Supervisor</option>
+                <option value="5">Sales</option>
+            </select>
+
+            <br/><br/>
+
+            <label for="dob">Date Of Birth</label>
+            <input type="date" name="dob" id="dob" class="" />
+
+            <br/><br/>
+
+            <label for="booking">Booking Time</label>
+            <input type="time" name="booking" id="booking" class="" />
+
+            <br/><br/>
+
+            <label for="apt">Appointment</label>
+            <input type="datetime-local" name="apt" id="apt" class="" />
+
+            <br/><br/>
+
+            <label for="volume">Volume</label>
+            <input type="range" name="volume" id="volume" class="" min="0" max="100" value="50" step="10" />
+
+
+            <br/><br/>
+
+            <label for="nrc">NRC</label>
+            <input type="file" name="nrc" id="nrc" class="" />
+
+            <br/><br/>
+
+            <label for="bio">Bio</label>
+            <textarea name="bio" id="bio" class="" rows="5" placeholder="Enter Your Bio..." ></textarea>
+
+            <br/><br/>
+
+            <input type="text" name="lat" id="lat" class="" hidden />
+            <input type="hidden" name="lan" id="lan" class="" />
+
+            <br/><br/>
+
+            <input type="reset" name="reset" id="reset" class="" value="Cancel" />
+            <input type="button" name="login" id="login" class="" value="Login" /> <!-- no feature -->
+            <input type="submit" name="signup" id="signup" class="" value="Sign-Up" /> <!-- form ကို submit လုပ်တဲ့ feature ပါရှိတယ်။ -->
+
+            <!-- button element က input element ထက် design အပိုများစွာ ဖန်တီးနိုင်တယ်။ -->
+            <!-- button element ကို သုံးပြီလည်း input နဲ့ တူတဲ့ feature တွေကို ယူလို့ရတယ်။ ဥပမာ - reset လိုမျိုး -->
+            <button type="reset" name="cancel" id="cancel" class="">Cancel</button>
+            <button type="button" name="register" id="register" class="">Register</button>
+            <button type="submit" name="signin" id="signin" class="">Sign-In</button>
+
 
 
         </form>
@@ -81,4 +151,9 @@ Form elements are used to collect user input in HTML forms. Common form elements
 2. <textarea>: Used for multi-line text input.
 3. <select>: Used to create drop-down lists.
 4. <button>: Used to create clickable buttons.
+
+<select name="role" id="role" class="" multiple> -> select မှာ name ကို array အနေနဲ့လည်း ပေးလို့ရတယ်။
+for example -> name="role[]"
+အဲလိုပေးလိုက်တာက user ဘက်ကနေ တခုထပ်ပိုတဲ့ values ရွေးတဲ့ အချိန်ကျရင် သူက [1, 3, 4] အဲလိုပုံစံဖြစ်ပြီ array ထဲ
+ဝင်သွားလိမ့်မယ်။
 -->
