day4: video, audio tags & some useful tags.

--- a/notes/html/l11media.html
+++ b/notes/html/l11media.html
@@ -20,6 +20,60 @@
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/vF_D6XDkwgo?si=eREnbY31CrDom8iS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-        <iframe width="1396" height="785" src="https://www.youtube.com/embed/Fdn7XfP3ODs" title="The Secret Life of Restaurant Servers" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Fdn7XfP3ODs" title="The Secret Life of Restaurant Servers" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        <hr/>
+
+        <h3>Audio</h3>
+
+        <h3>Audio - External</h3>
+
+        <audio src="https://samplelib.com/lib/preview/mp3/sample-3s.mp3" controls loop></audio>
+
+        <h3>Audio - Internal</h3>
+
+        <audio src="./audio/sample.mp3" controls loop></audio>
+
+        <hr/>
+
+        <h3>Video</h3>
+
+        <h3>Video - External</h3>
+
+        <video src="https://www.sample-videos.com/video321/mp4/720/big_buck_bunny_720p_1mb.mp4" width="400" controls></video>
+
+        <video src="https://www.pexels.com/download/video/3078389/" width="400" controls loop></video>
+
+        <h3>Video - Internal</h3>
+
+        <video src="./video/sample_video.mp4" width="400px" controls loop></video>
+
+        <hr/>
+
+        <b>This is a bold tag.</b>
+        <strong>This is a strong tag.</strong>
+
+        <br/>
+
+        <i>This is an italic tag.</i>
+        <em>This is an emphasis tag.</em>
+
+        <br/>
+
+        <span>This is a span tag.</span>
+
+        <br/>
+
+        <small>This is a small tag.</small>
+
+        <address>
+            This is an address tag.
+            1234 Main St.
+        </address>
+
+        <br/>
+
+        <h3>Today Special 50% <del>OFF</del></h3>
+
     </body>
 </html>
