day5: external css, single, group selector, etc..

--- a/notes/html/l12cssintro.html
+++ b/notes/html/l12cssintro.html
@@ -4,6 +4,7 @@
         <title>CSS Intro</title>
         <link href="./img/fav/instgram.png" rel="icon" type="image/png" sizes="64x64" />
 
+        <!-- Internal Style -->
         <style>
             h1 {
                 color: blue;
@@ -51,5 +52,33 @@
             <h5>Hello CSS H5</h5>
             <h6>Hello CSS H6</h6>
         </div>
+
+        <!-- Inline Style -->
+
+        <p style="color: steelblue; font-size: 20px;">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+
+        <div style="color: violet;">
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+
+            <span>Thank You!</span>
+
+            <h3 style="color: red;">Hello World</h3>
+        </div>
     </body>
 </html>
+
+<!-- 
+    CSS မှာက တူညီတဲ့ selector တွေကို သုံးခဲ့ရင် အဲတူညီတဲ့ selector တွေကိုပဲ override လုပ်လေ့ရှိတယ်။
+ -->
