day6: id & class selectors, txtalign, txtdeco, txtline, txtshadow

--- a/notes/html/l13externalstyle.html
+++ b/notes/html/l13externalstyle.html
@@ -25,5 +25,47 @@
             <h5>Hello CSS H5</h5>
             <h6>Hello CSS H6</h6>
         </div>
+
+        <hr/>
+
+        <div>
+            <span id="myself">I Love Myself.</span>
+            <br/>
+
+            <span id="family">I Love My Parents.</span>
+            <br/>
+
+            <span id="th">Hello, Thailand</span>
+            <br/>
+
+            <i id="la">I Love Laos.</i>
+            <br/>
+        </div>
+
+        <hr/>
+
+        <div>
+            <span class="phone">Sony Phone</span>
+            <br/>
+
+            <span class="phone fontlg">MI Phone</span>
+            <br/>
+
+            <span class="phone">Samsung Phone</span>
+            <br/>
+
+            <span class="phone">Nokia Phone</span>
+            <br/>
+
+            <i class="phone fontlg">iPhone</i>
+        </div>
     </body>
 </html>
+
+<!-- 
+ID and Class Selectors ရဲ့ကွာခြားချက်
+ID Selector က တစ်ခုတည်းသော Element ကိုသာ သတ်မှတ်ပေးနိုင်သည်။ 
+Class Selector က တစ်ခုထက်ပိုသော Element များကို သတ်မှတ်ပေးနိုင်သည်။
+
+ID မှာက value တခုပဲဖြစ်လို့ရတယ်။ Class မှာတော့ value အများကြီးပေးလို့ရတယ်။
+ -->
