day7: bdstyles, bg/bg-color, bdradius, list-styles, attri-selectors

--- a/notes/html/l14textstyle.html
+++ b/notes/html/l14textstyle.html
@@ -45,5 +45,11 @@
             <h1 class="textshadow">Hello Mandalay</h1>
         </div>
 
+        <hr/>
+
+        <div>
+            <h1 class="dreamshadow">You can do it. You can become successful in life. You can become an IT professional.</h1>
+        </div>
+
     </body>
 </html>
