--- a/notes/html/l15borderstyle.html
+++ b/notes/html/l15borderstyle.html
@@ -3,7 +3,7 @@
     <head>
         <title>Border Style</title>
         <link href="./img/fav/youtube.jpg" rel="icon" type="image/jpg" sizes="64x64" />
-        <link href="../css/15borderstyle.css" rel="stylesheet" type="text/css" />
+        <link href="../css/l15borderstyle.css" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
