day9: linear-gradient, combined with image

--- a/notes/html/l16divdesign.html
+++ b/notes/html/l16divdesign.html
@@ -20,5 +20,19 @@
             <i>Hello Mandalay</i>
         </div>
 
+        <hr/>
+
+        <div class="thirddiv">
+            <p>Hello Bago</p>
+            <i>Hello Mawlamyine</i>
+        </div>
+
+        <hr/>
+
+        <div class="fourthdiv">
+            <p>Hello Bangkok</p>
+            <i>Hello Chiangmai</i>
+        </div>
+
     </body>
 </html>
