day9: rename img, vid, fav files, fixed some img, vid, fav dirs

--- a/notes/html/l11media.html
+++ b/notes/html/l11media.html
@@ -46,7 +46,7 @@
 
         <h3>Video - Internal</h3>
 
-        <video src="./video/sample_video.mp4" width="400px" controls loop></video>
+        <video src="../video/sample_video.mp4" width="400px" controls loop></video>
 
         <hr/>
 
