--- a/notes/html/l12cssintro.html
+++ b/notes/html/l12cssintro.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CSS Intro</title>
-        <link href="./img/fav/instgram.png" rel="icon" type="image/png" sizes="64x64" />
+        <link href="../img/fav/instgram.png" rel="icon" type="image/png" sizes="64x64" />
 
         <!-- Internal Style -->
         <style>
