--- a/notes/html/l13externalstyle.html
+++ b/notes/html/l13externalstyle.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>External Style</title>
-        <link href="./img/fav/youtube.jpg" rel="icon" type="image/jpg" sizes="64x64" />
-        <link href="./../css/l13externalstyle.css" rel="stylesheet" type="text/css" />
+        <link href="../img/fav/youtube.png" rel="icon" type="image/png" sizes="64x64" />
+        <link href="../css/l13externalstyle.css" rel="stylesheet" type="text/css" />
 
         <style type="text/CSS">
             h1 {
