--- a/notes/html/l14textstyle.html
+++ b/notes/html/l14textstyle.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Text Style</title>
-        <link href="./img/fav/youtube.jpg" rel="icon" type="image/jpg" sizes="64x64" />
+        <link href="../img/fav/instgram.png" rel="icon" type="image/png" sizes="64x64" />
         <link href="../css/l14textstyle.css" rel="stylesheet" type="text/css" />
     </head>
 
