--- a/notes/html/l6imagetag.html
+++ b/notes/html/l6imagetag.html
@@ -16,12 +16,12 @@
 
         <h3>Image Tag - Internal</h3>
 
-        <img src="./img/hello/cat.jpg" alt="offline cat" />
+        <img src="../img/hello/cat.jpg" alt="offline cat" />
 
-        <img src="./img/hello/cat_2.jpg" alt="offline cat2" width="300" height="200" />
+        <img src="../img/hello/cat_2.jpg" alt="offline cat2" width="300" height="200" />
 
-        <a href="./img/hello/cat.jpg">
-            <img src="./img/hello/cat.jpg" alt="link to img" />
+        <a href="../img/hello/cat.jpg">
+            <img src="../img/hello/cat.jpg" alt="link to img" />
         </a>
     </body>
 </html>
