--- a/notes/html/l17fontstyle.html
+++ b/notes/html/l17fontstyle.html
@@ -2,13 +2,42 @@
 <html>
     <head>
         <title>Font Style</title>
-        <link href="../img/fav/youtube.png" rel="icon" type="image/png" />
+        <link href="../img/fav/youtube.png" rel="icon" type="image/png" sizes="64x64" />
+
+        <!-- CDN (Content Deliver Network) -->
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Stick&display=swap" rel="stylesheet"> -->
+
         <link href="../css/l17fontstyle.css" rel="stylesheet" type="text/css" />
+
+        <!-- 
+        @import ဆိုတာကို HTML ထဲမှာကော CSS ထဲမှာ ကော ရေးလိ့ရတယ်။
+        HTML ထဲမှာ ရေးမယ်ဆိုရင် style tag ထဲမှာ ရေးရမယ်။
+        CSS ထဲမှာ ရေးမယ်ဆိုရင် css file ရဲ့ ထိပ်ဆုံးမှာ ရေးရမယ်။
+          -->
+        <!-- <style>
+            @import url('https://fonts.googleapis.com/css2?family=Stick&display=swap');
+        </style> -->
     </head>
 
     <body>
-        <p>
-            abcd
-        </p>
+        <div>
+            <p class="p1">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+
+            <p class="p2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+
+            <p class="p3">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+
+            <p class="p4">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+        </div>
     </body>
 </html>
