day11: paddings, transitions, add css files

--- a/notes/html/l17fontstyle.html
+++ b/notes/html/l17fontstyle.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Stick&display=swap" rel="stylesheet"> -->
 
         <link href="../css/l17fontstyle.css" rel="stylesheet" type="text/css" />
+        <!-- <link href="../css/l17addfile.css" rel="stylesheet" type="text/css" /> -->
 
         <!-- 
         @import ဆိုတာကို HTML ထဲမှာကော CSS ထဲမှာ ကော ရေးလိ့ရတယ်။
@@ -52,6 +53,28 @@
             </div>
 
             <hr/>
+            <br/><br/><br/>
+
+            <div>
+                <a href="#" class="menutext">Menu One</a>
+                <a href="#" class="menutext">Menu Two</a>
+                <a href="#" class="menutext">Menu Three</a>
+                <a href="#" class="menutext">Menu Four</a>
+                <a href="#" class="menutext">Menu Five</a>
+            </div>
+
+
+            <br/><br/><br/>
+            <hr/>
+
+            <br/><br/><br/>
+            <div>
+                <img src="../img/icon/icon_1.png" class="imgdesign" alt="icon1" />
+                <img src="../img/icon/icon_2.png" class="imgdesign" alt="icon2" />
+                <img src="../img/icon/icon_3.png" class="imgdesign" alt="icon3" />
+                <img src="../img/icon/icon_4.png" class="imgdesign" alt="icon4" />
+                <img src="../img/icon/icon_5.png" class="imgdesign" alt="icon5" />
+            </div>
         </div>
     </body>
 </html>
