day14: pseudoclass updates

--- a/notes/html/l19pseudoclass.html
+++ b/notes/html/l19pseudoclass.html
@@ -40,6 +40,31 @@
 
         <hr/>
 
+        <div>
+            <p>This will be bold text.</p>
+            <p class="nobold">This will not be bold text.</p>
+            <p>This will be bold text.</p>
+        </div>
+
+        <hr/>
+
+        <form action="" method="">
+            <label for="fullname">Full Name</label>
+            <input type="text" name="fullname" id="fullname" class="fullname" placeholder="Enter Your Full Name.." />
+
+            <br/>
+
+            
+            <label>
+                <input type="checkbox" name="agree" id="agree" class="" />I Agree
+            </label>
+
+            <br/>
+
+            <button type="reset">Cancel</button>
+            <button type="submit" disabled>Submit</button>
+        </form>
+
 
     </body>
 </html>
