day17: transform scale, skew, translate/X/Y

--- a/notes/html/l22transform.html
+++ b/notes/html/l22transform.html
@@ -55,5 +55,11 @@
         </div>
 
         <hr/>
+
+        <div>
+            <div class="div9">Div Nine</div>
+        </div>
+
+        <hr/>
     </body>
 </html>
