--- a/notes/html/l24menulist.html
+++ b/notes/html/l24menulist.html
@@ -12,8 +12,8 @@
     <body>
         <nav>
             <ul>
-                <li><a href="#"><i class="fa-regular fa-house"></i>Home</a></li>
-                <li><a href="#"><i class="fa-regular fa-newspaper"></i>News</a></li>
+                <li><a href="#"><i class="fa-regular fa-house"></i>&copy; Home</a></li>
+                <li><a href="#"><i class="fa-regular fa-newspaper"></i>&reg; News</a></li>
                 <li><a href="#"><i class="fa-solid fa-book"></i>Ebooks</a></li>
                 <li><a href="#"><i class="fa-regular fa-address-card"></i>About Us</a></li>
                 <li><a href="#"><i class="fa-regular fa-address-book"></i>Contact</a></li>
