day20: add keyframe files

--- a/notes/html/l27keyframe.html
+++ b/notes/html/l27keyframe.html
@@ -8,6 +8,9 @@
     </head>
 
     <body>
-        
+        <div class="boxone">
+            <div class="div1">Div 1</div>
+            <div class="div2">Div 2</div>
+        </div>
     </body>
 </html>
