--- a/notes/html/l27keyframe.html
+++ b/notes/html/l27keyframe.html
@@ -9,8 +9,13 @@
 
     <body>
         <div class="boxone">
-            <div class="div1">Div 1</div>
-            <div class="div2">Div 2</div>
+            <div class="div1"></div>
+
+            <div class="pointercontainer">
+                <span class="pointer"></span>
+            </div>
+            
+            <div class="div2"></div>
         </div>
     </body>
 </html>
