--- a/notes/exercises/lesson_2/2d.html
+++ b/notes/exercises/lesson_2/2d.html
@@ -5,8 +5,39 @@
 
         <link href="../../img/fav/instgram.png" rel="icon" type="image/png" sizes="64x64" />
         
-        <style>
+        <style type="text/css">
+            .get_started_button {
+                background-color: rgb(121, 82, 179);
+                color: #fff;
+                font-weight: bold;
 
+                border: none;
+                border-radius: 3px;
+
+                /* 
+                instead of padding, we can use height and width, but 
+                it is not recommended because it will not be responsive.
+                 */
+                padding: 15px 25px;
+                margin-right: 5px;
+
+                cursor: pointer;
+            }
+
+            .download_button {
+                /* background-color: transparent; */
+                background-color: #fff;
+                color: rgb(108, 117, 125);
+                font-weight: bold;
+
+                border-width: 1px;
+                border-radius: 3px;
+                border-color: rgb(108, 117, 125);
+
+                padding: 14px 25px;
+
+                cursor: pointer;
+            }
         </style>
     </head>
 
